plugins {
    id 'com.diffplug.spotless' version '6.+'
}

group = 'io.orkes.conductor'

apply from: "$rootDir/versions.gradle"

subprojects {
    apply plugin: 'java'
    apply plugin: 'com.diffplug.spotless'
    apply plugin: 'jacoco'
    group = 'org.conductoross'

    spotless {
        java {
            removeUnusedImports()
            importOrder('java', 'javax', 'org', 'com.netflix', 'io.orkes', '', '\\#com.netflix', '\\#')
            licenseHeaderFile("$rootDir/licenseheader.txt")
        }
    }

    jacoco {
        toolVersion = "0.8.11"
    }

    jacocoTestReport {
        dependsOn test
        reports {
            xml.required = true
            html.required = true
        }
        
        afterEvaluate {
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, exclude: [
                    '**/generated/**',
                    '**/model/**',
                    '**/test/**'
                ])
            }))
        }
    }

    test {
        jacoco {
            excludes = ['**/generated/**']
        }
        finalizedBy jacocoTestReport
    }

    compileJava {
        sourceCompatibility = 21
        targetCompatibility = 21
    }

    dependencies {
        // ### candidates to be shadowed ###
        implementation "com.google.guava:guava:${versions.guava}"
        // #################################

        // Jackson 3: databind/core/modules live under tools.jackson; annotations remain on the
        // com.fasterxml.jackson 2.x line. java.time (jsr310) and jdk8 datatypes plus the
        // afterburner optimisations are part of core in Jackson 3, so those modules are gone.
        implementation "tools.jackson.core:jackson-databind:${versions.jackson}"
        implementation "tools.jackson.core:jackson-core:${versions.jackson}"
        implementation "com.fasterxml.jackson.core:jackson-annotations:${versions.jacksonAnnotations}"
        implementation "tools.jackson.module:jackson-module-kotlin:${versions.jackson}"
        implementation "org.openjdk.nashorn:nashorn-core:15.6"

        implementation "org.slf4j:slf4j-api:${versions.slf4j}"
        implementation "org.apache.commons:commons-lang3:${versions.commonsLang}"
        annotationProcessor "org.projectlombok:lombok:${versions.lombok}"
        compileOnly "org.projectlombok:lombok:${versions.lombok}"
    }

    repositories {
        mavenCentral()
        mavenLocal()
        maven {
            url "https://s01.oss.sonatype.org/content/repositories/releases/"
        }
    }

    tasks.withType(Javadoc) {
        options.addStringOption('Xdoclint:none', '-quiet')
    }

}
